# tcpcm-transcriber

./: .gitignore  README.md  example.py  pyproject.toml
tcpcm_transcriber/: __init__.py  asr.py  chunk.py  cli.py  export.py  glossary_default.json  media.py  normalize.py  schemas.py
tests/: __init__.py  test_chunk.py  test_export.py  test_integration.py  test_normalize.py
